objects/CMI_TSP__c.object
<CustomObject>
    <fields>
        <fullName>CMI_Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TSPs</relationshipLabel>
        <relationshipName>TSPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMI_Account_Num__c</fullName>
        <label>Account #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Other_TSP_Name__c</fullName>
        <label>Other TSP Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_TSP_Id__c</fullName>
        <label>Customer Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_TSP_Name__c</fullName>
        <label>TSP Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Eye</fullName>
                </value>
                <value>
                    <fullName>BenchVTSP</fullName>
                    <isActive>false</isActive>
                    <label>BenchVTSP</label>
                </value>
                <value>
                    <fullName>CCFETest</fullName>
                    <isActive>false</isActive>
                    <label>CCFETest</label>
                </value>
                <value>
                    <fullName>CCFETest2</fullName>
                    <isActive>false</isActive>
                    <label>CCFETest2</label>
                </value>
                <value>
                    <fullName>clever devices</fullName>
                    <isActive>false</isActive>
                    <label>clever devices</label>
                </value>
                <value>
                    <fullName>Copiloto Satelital</fullName>
                </value>
                <value>
                    <fullName>Cummins</fullName>
                </value>
                <value>
                    <fullName>Cummins-ETD</fullName>
                    <isActive>false</isActive>
                    <label>Cummins-ETD</label>
                </value>
                <value>
                    <fullName>CumminsTelematics</fullName>
                    <isActive>false</isActive>
                    <label>CumminsTelematics</label>
                </value>
                <value>
                    <fullName>DriverTech</fullName>
                </value>
                <value>
                    <fullName>Edison</fullName>
                </value>
                <value>
                    <fullName>Elevat</fullName>
                </value>
                <value>
                    <fullName>Fake</fullName>
                    <isActive>false</isActive>
                    <label>Fake</label>
                </value>
                <value>
                    <fullName>Faria Entelnet</fullName>
                </value>
                <value>
                    <fullName>Fleet Complete</fullName>
                </value>
                <value>
                    <fullName>FWTelematics</fullName>
                    <isActive>false</isActive>
                    <label>FWTelematics</label>
                </value>
                <value>
                    <fullName>Geotab</fullName>
                </value>
                <value>
                    <fullName>Hyundai Construction Equipment</fullName>
                </value>
                <value>
                    <fullName>IDEX Fire &amp; Safety</fullName>
                </value>
                <value>
                    <fullName>India_Edge</fullName>
                </value>
                <value>
                    <fullName>Infobric</fullName>
                </value>
                <value>
                    <fullName>KMAP</fullName>
                </value>
                <value>
                    <fullName>KomtraxPlus</fullName>
                </value>
                <value>
                    <fullName>LHP Telematics</fullName>
                </value>
                <value>
                    <fullName>Microlise</fullName>
                </value>
                <value>
                    <fullName>Mobile Test</fullName>
                    <isActive>false</isActive>
                    <label>Mobile Test</label>
                </value>
                <value>
                    <fullName>Navistar</fullName>
                </value>
                <value>
                    <fullName>omnitracs</fullName>
                </value>
                <value>
                    <fullName>OnCommand Link</fullName>
                </value>
                <value>
                    <fullName>Other TSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Telematics_ID__c</fullName>
        <description>this field is to store the value of the TSP ID that comes from the API or else from the front end.</description>
        <label>TSP ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>TSP</label>
    <nameField>
        <displayFormat>TSP-{00000}</displayFormat>
        <label>TSP Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TSPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CMI_Other_TSP</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(CMI_TSP_Name__c, &apos;Other TSP&apos;) &amp;&amp;  ISBLANK(CMI_Other_TSP_Name__c) , True, False)</errorConditionFormula>
        <errorDisplayField>CMI_Other_TSP_Name__c</errorDisplayField>
        <errorMessage>Other TSP Name has to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMI_Other_TSP_Not_required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL( CMI_TSP_Name__c , &apos;Other TSP&apos;) ) &amp;&amp; NOT(ISBLANK( CMI_Other_TSP_Name__c ) )</errorConditionFormula>
        <errorDisplayField>CMI_Other_TSP_Name__c</errorDisplayField>
        <errorMessage>you cannot enter a value here.because Customer did not select Other TSP</errorMessage>
    </validationRules>
</CustomObject>